FAQ page fixed
-there was a large gap of space in the faqs pages

--- a/questr/static/css/index.css
+++ b/questr/static/css/index.css
@@ -1,14 +1,12 @@
 @charset "utf-8";
 
-html {
-
-}
 
 body{
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background:#f9f9f9;
 	font-weight:300;
 	color:rgba(0,0,0,0.8);
+
 	}
 	
 
